--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- <h5> comment_key.date.strftime("%d/%m/%y") }}</h5> -->
         <p>{{ comment_key.get().comment }}</p>
       {% endfor %}
-      <form action="/comment" method="post">
+      <form action="/comments" method="post">
         <div>Name: <input name="name"></input></div>
         <div>Comment: <textarea name="comment" rows="2" cols="40"></textarea></div>
         <div><input type="hidden" name="post_url_key" value="{{ post.key.urlsafe() }}">
@@ -25,7 +25,7 @@
       </form>
       <hr>
 
-      <form action="/tag" method="post">
+      <form action="/tags" method="post">
         <div>Tag Name: <input name="name"></input></div>
         <div><input type="hidden" name="post_url_key" value="{{ post.key.urlsafe() }}">
         <div><input type="submit" value="Make Tag"></div>
