Imported Matt's model which makes more sense. Need to fix bug @classmethod. Tag doesn't have a tag_name property

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     {% for post in posts %}
       <h3>Title: {{ post.name }}</h3>
       <h5>Tags:
-      {% for tag_key in post.tag_keys %}
-         {{ tag_key.get().name }},
+      {% for tag in post.get_tags() %}
+         {{ tag.name }},
       {% endfor %}
     </h5>
       <h5>{{ post.date.strftime("%d/%m/%y") }}</h5>
