Tags are added.  you can still add multiple identical tags to a single post though. :(

--- a/tags.html
+++ b/tags.html
@@ -5,9 +5,9 @@
     <h2>Tags</h2>
     {% for tag in tags %}
       <h3>Tag Title: {{ tag.name }}</h3>
-      
+
       <ul>
-      {% for post in tag.posts %}
+      {% for post in tag.get_posts() %}
          <li>Post: {{ post.name }}</li>
       {% endfor %}
       </ul>
