Make links in between the tag and posting pages

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 {% autoescape true %}
 <html>
   <body>
+    <a href="/tags">See all the tags!</a>
     <h2>Posts</h2>
     {% for post in posts %}
       <h3>Title: {{ post.title }}</h3>
