--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,7 @@
 {% autoescape true %}
 <html>
   <body>
+    <a href="/">Go back to the blog!</a>
     <h2>Tags</h2>
     {% for tag in tags %}
       <h3>Tag Title: {{ tag.name }}</h3>
