change name to title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     {% endfor %}
 
     <form action="/" method="post">
-      <div>Name: <input name="name"></input></div>
+      <div>Title: <input name="title"></input></div>
       <div>Content: <textarea name="content" rows="3" cols="60"></textarea></div>
       <div><input type="submit" value="Add Post"></div>
     </form>
