remove the solution

--- a/tags.html
+++ b/tags.html
@@ -5,13 +5,13 @@
     <a href="/">Go back to the blog!</a>
     <h2>Tags</h2>
     <!-- Show each tag in tags -->
-    {% for tag in tags %}
+    <!-- {% your code goes here %} -->
       <h3>Tag Title: {{ tag.name }}</h3>
       <ul>
       <!-- Show all of the posts for each tag (use .get_posts() ) -->
-      {% for post in tag.get_posts() %}
+      <!-- {% your code goes here %} -->}
          <li>Post: {{ post.name }}</li>
-      {% endfor %}
+      <!-- {% your code goes here %} -->
       </ul>
       <hr>
     {% endfor %}
