--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
       <hr>
 
       <!-- This is the tags form that needs to pass its params to '/tags' by 'post' -->
-      <form action="/tags" method="post">
-        <div>Tag Name: <input name="name"></input></div>
-        <div><input type="hidden" name="post_url_key" value="{{ post.key.urlsafe() }}">
-        <div><input type="submit" value="Make Tag"></div>
-      </form>
+      <!-- Your form goes here -->
       <hr>
     {% endfor %}
 
